--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@ body,
 
 #app {
   display: flex;
-  flex-wrap: wrap-reverse;
 }
 
 .box {
@@ -15,4 +14,18 @@ body,
   height: 60px;
   background: #f00;
   margin: 5px;
+}
+
+.red {
+  order: 3;
+}
+
+.green {
+  background: #0f0;
+  order: 2;
+}
+
+.blue {
+  background: #00f;
+  order: 0;
 }
