--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,12 @@
-html,
-body,
-#app {
-  height: 100%;
+* {
   margin: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-#app {
-  display: flex;
-}
-
-.box {
-  width: 150px;
-  height: 60px;
-  background: #f00;
-  margin: 5px;
-}
-
-.red {
-  order: 3;
-}
-
-.green {
-  background: #0f0;
-  order: 2;
-}
-
-.blue {
-  background: #00f;
-  order: 0;
+body {
+  background: #e6ecf0;
+  font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+  text-rendering: optimizeLegibility !important;
+  -webkit-font-smoothing: antialiased !important;
 }
